--- a/style/style.css
+++ b/style/style.css
@@ -311,12 +311,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  gap: 30px;
   width: 100%;
-  border: 1px solid;
-  height: 90vh;
+ 
+  height: 92vh;
 
+
+
+ }
+.stories-1st-column{
+  position: relative;
+  
 }
+.stories-1st-button{
+  position: absolute;
+  left: 50px;
+  top: 270px;
+} 
 
 .stories-heading{
   font-size: 2.8rem;
@@ -324,18 +335,40 @@
   text-align: center;
 
 }
+.frist-same-button{
+  font-size: 1rem;
+  font-weight: 500;
+  border-radius: 47px;
+  padding: 10px 15px;
+  color: white;
+  border-style: none;
+ 
+}
 .stories-1st-img{
   width: 100%;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
  
-  padding-bottom: 80px;
+ padding-bottom: 40px;
 }
 
 .stories-1st-column{
   padding-bottom: 20px;
   background-color: white;
   border-radius: 14px;
+
+text-align: center;
+  
+  
 }
-.stories-2nd-column{
+.stories-1st-title{
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.stories-1st-description{
+  font-size: 1rem;
+  font-weight: 500;
+  color: rgba(102, 102, 102, 1);
  
 }
 
@@ -350,18 +383,68 @@
   grid-template-columns: repeat(2,1fr);
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  gap: 25px;
+
 
 }
 .stories-2nd-sub-column{
   background-color: white;
+  border-radius: 14px;
+  text-align: center;
+  position: relative;
 }
-
+.stories-2nd-img{
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+}
 .view-button{
  display: block;
  margin: 0 auto;
   
 }
+.second-title{
+  font-size: 1rem;
+  font-weight: 700;
+  color: black;
+}
+
+.same-button{
+  font-size: 1rem;
+font-weight: 500;
+border-radius: 47px;
+padding: 10px 15px;
+color: white;
+border-style: none;
+position: absolute;
+left: 40px;
+top: 160px;
+}
+.stories-1st-button{
+  
+ background-color: #3CD8E8;
+}
+.same-button1{
+  background-color: #95B226;
+}
+.same-button2{
+  background-color:#5D58F0 ;  
+}
+.same-button3{
+  background-color: #95B226;
+}
+.same-button4{
+  background-color: #95B226;
+}
+.view-button{
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: white;
+  background-color: black;
+  padding: 9px 40px;
+  border-radius: 12px;
+  margin: 30px auto;
+}
+
 
 /* footer section  */
 
@@ -370,41 +453,74 @@
 footer{
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  justify-content:center;
+  justify-content:space-between;
   align-items: center;
  
   background-color: rgb(25, 183, 245);
-
-
 }
-#frist-column{
-  max-width:1400px;
-  width: 100%;
-}
+
 .beg-kids{
   display: flex;
+  justify-content:flex-start;
+  align-items: center;
 }
 .logo-img{
   color: white;
-  background-color: white;
+ 
+  
 }
+.kidds{
+  color: white;
+  font-size: 2.6rem;
+  font-weight: 700;
+
+}
+.pizza{
+  font-size: 1.25rem;
+  color: white;
+}
+
+
+
+
 /* second column  */
+
+.school{
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: white;
+  margin-left: 70px;
+}
+.second-navlink a{
+  text-decoration: none;
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 500;
+
+}
 
 
 
 /* thirs column  */
 .third-column ul{
   display: flex;
-  margin-left: 75 px;
+  justify-content:center;
+
+ 
 
 
+}
+.footer-ul{
+  margin-right: 30px;
 }
 
 ul li{
   list-style: none;
 }
 
-.second-navlink a{
-  text-decoration: none;
+.keep{
+  font-weight:700 ;
   color: white;
+  font-size:1.6rem ;
+  margin-right: 200p;
 }
