--- a/style/style.css
+++ b/style/style.css
@@ -18,11 +18,18 @@
   margin: 0;
   padding: 0;
  }
-/* share style  */
-.width-style {
-  max-width: 1100px;
- margin: 0 auto;
+  /* share style  */
  
+ 
+  .width-style {
+  max-width: 1440px;
+ margin: 0 auto;
+  
+}
+.width-style2{
+  max-width: 1160px;
+  margin: 0 auto;
+  
 }
 .text-aline{
   text-align: center;
@@ -182,6 +189,7 @@
  
  
  
+ 
 }
 
 
@@ -191,8 +199,9 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   padding-top: 40px;
 
- 
-  height:60vh;
+  max-width: 368px;
+  height: 476px;
+  margin:0 auto;
 
 
 
@@ -312,21 +321,21 @@
   justify-content: space-between;
   align-items: center;
   gap: 30px;
-  width: 100%;
- 
-  height: 92vh;
+
 
 
 
  }
 .stories-1st-column{
   position: relative;
+  max-width: 540px;
+  
   
 }
 .stories-1st-button{
   position: absolute;
   left: 50px;
-  top: 270px;
+  top: 310px;
 } 
 
 .stories-heading{
@@ -384,6 +393,8 @@ text-align: center;
   justify-content: space-between;
   align-items: center;
   gap: 25px;
+ max-width: 661px;
+
 
 
 }
@@ -457,6 +468,7 @@ footer{
   align-items: center;
  
   background-color: rgb(25, 183, 245);
+ 
 }
 
 .beg-kids{
@@ -523,4 +535,13 @@ ul li{
   color: white;
   font-size:1.6rem ;
   margin-right: 200p;
+}
+ 
+
+/* Responsive part 
+--------------------- */
+
+
+@media screen add (max-width:576px) {
+  
 }
