--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,10 @@
 .text-aline{
   text-align: center;
 }
-
+ /* resposive extra part */
+ .hide2{
+  display: none ;
+ }
 
 
 
@@ -160,6 +163,19 @@
 
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* main  */
@@ -538,10 +554,84 @@ ul li{
 }
  
 
+
+
+
 /* Responsive part 
 --------------------- */
 
 
-@media screen add (max-width:576px) {
+@media screen and (max-width:576px)  {
+   body{
+    margin: 0;
+    padding: 0;
+   }
+  .hide{
+    display: none;
+  }
+  .hide2{
+    display:block ;
+   }
   
-}
+   .nav-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content:space-between;
+    align-items:center;
+    margin-bottom: 20px;
+   }
+  .hamburger-button{
+    display: flex;
+    flex-direction: column;
+  justify-content: space-between;
+    align-items:center;
+    width: 650px;
+    height: 20px;
+    
+  
+  
+  }
+  .strait-line1{
+    height: 3px;
+    width: 20px;
+   border-radius: 4px;
+  
+    background-color: black;
+  
+  }
+  .strait-line2{
+    height: 3px;
+    width: 20px;
+   border-radius: 2px;
+  
+    background-color: black;
+  
+  }
+  .strait-line3{
+    height: 3px;
+    width: 20px;
+   border-radius: 2px;
+  
+    background-color: black;
+  
+  }
+  
+  .container{
+    flex-direction: column-reverse;
+  }
+  
+  .care-countainer,
+  .stories-2nd-column,
+  footer
+  {
+  
+    grid-template-columns: repeat(1, 1fr);
+    
+  }
+  
+ 
+  
+  
+  }
+  
+  
