--- a/style/style.css
+++ b/style/style.css
@@ -630,7 +630,14 @@ ul li{
   }
   
  
-  
+  footer{
+   
+    grid-template-columns: repeat(1,1fr);
+
+  }
+  body{
+    max-width: 576px;
+  }
   
   }
   
