--- a/style/style.css
+++ b/style/style.css
@@ -196,7 +196,7 @@
 
 }
 
-.care-countainer {
+.card-countainer{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-content: center;
